static/style.css
html {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

div#main {
    text-align: center;
    margin: auto;
    margin-top: -100px;
    position: absolute;
    top: 50%;
    width: 100%;
}

h1 {
    color: white;
    font-size: 10em;
    text-shadow:2px 2px 4px #000000;
    margin: 10px;
}

h2 {
    color: white;
    font-size: 3em;
    text-shadow:2px 2px 4px #000000;
    margin: 10px;
}

